# midi-key-interpreter

./: Cargo.toml  README.md
src/: keys.rs  main.rs
